# CPrimes

./: CMakeLists.txt  main.cc
